# couchbase-lite-vector-search-samples

./: README.md
color/: readme.md
color/android/: README.md  settings.gradle
color/android/app/: build.gradle
color/android/app/src/main/: AndroidManifest.xml
color/android/app/src/main/res/layout/: activity_main.xml  list_item.xml
color/android/gradle/wrapper/: gradle-wrapper.properties
color/c/: .gitignore  CMakeLists.txt  README.md
color/c/dataset/db.cblite2/: db.sqlite3
color/c/extension/: README.md
color/c/lib/libcblite/: README.md
color/c/src/: DBManager.cpp  DBManager.h  RGB.h  main.cpp
color/ios/: README.md
color/ios/Color/: ColorApp.swift
color/ios/Color.xcodeproj/: project.pbxproj
color/ios/Color.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
color/ios/Color/Model/: ContentViewModel.swift
color/ios/Color/Service/: AppService.swift
color/ios/Color/Util/: Extensions.swift  RGB.swift
color/ios/Color/View/: ColorRow.swift  ContentView.swift
color/ios/Frameworks/: README.md
color/java/: .gitignore  build.gradle  settings.gradle
color/java-cli/: .gitignore  README.md  build.gradle  settings.gradle
color/java-cli/gradle/wrapper/: gradle-wrapper.properties
color/java/src/main/java/: module-info.java
word/ios/: .gitignore
word/ios/Word/: WordApp.swift
word/ios/Word.xcodeproj/: project.pbxproj
word/ios/Word/Model/: ContentViewModel.swift
word/ios/Word/Service/: AppService.swift
word/ios/Word/Util/: Extensions.swift
word/ios/Word/View/: ContentView.swift  WordRow.swift
(+29 files in other folders)
